# cppgtfs

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  external.cmake
include/cppgtfs/: DataExtractor.h  GTFS.h  Reader.h  Writer.h
include/csv/: CsvField.h  CsvParser.h  CsvWriter.h
src/: CMakeLists.txt
src/ad/cppgtfs/: CMakeLists.txt  DataExtractor.cpp  DataExtractor.h  Parser.h  Parser.tpp  Reader.cpp  Reader.h  Writer.cpp  Writer.h
src/ad/cppgtfs/exceptions/: FileNotFoundException.cpp  FileNotFoundException.h  ParseException.cpp  ParseException.h
src/ad/cppgtfs/gtfs/: Agency.h  ContContainer.h  ContContainer.tpp  Container.h  Container.tpp  Fare.h  Feed.h  Feed.tpp  Frequency.h  NullContainer.h  Route.h  Service.cpp  Service.h  Shape.h  Stop.h  StopTime.h  Transfer.h  Trip.h  Trip.tpp
src/ad/cppgtfs/gtfs/flat/: Agency.cpp  Agency.h  Fare.cpp  Fare.h  Frequency.cpp  Frequency.h  Route.cpp  Route.h  Service.cpp  Service.h  Shape.cpp  Shape.h  Stop.cpp  Stop.h  StopTime.cpp  StopTime.h  Time.cpp  Time.h  Transfer.cpp  Transfer.h  Trip.cpp  Trip.h
src/cppgtfs/: CMakeLists.txt  DataExtractor.cpp  Reader.cpp  Writer.cpp  main.cpp
src/cppgtfs/exceptions/: FileNotFoundException.cpp  ParseException.cpp  WriteException.cpp
src/cppgtfs/gtfs/: Agency.cpp  Fare.cpp  Feed.cpp  Frequency.cpp  Route.cpp  Service.cpp  Shape.cpp  Stop.cpp  StopTime.cpp  Transfer.cpp  Trip.cpp
src/cppgtfs/util/: Time.cpp
src/csv/: CsvField.cpp  CsvParser.cpp  CsvWriter.cpp
test/: CMakeLists.txt  config.h.in  tests.cpp
(+39 files in other folders)
